# climate_scenario_web_tool

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_dev.sh
.github/workflows/: docker-image.yml  js-app.yml  python-app.yml
docker/: README.md  docker-compose.yml
docs/: alternative_dev_setup.md  architecture.d2  main_sequence.d2
mapserver/: scotclimpact.map
scotclimpact/: __init__.py  boundary_layer.py  cache.py  config.py  data.py  data_helpers.py  db.py  developing_process.py  extreme_temp.py  hazards.py  postgres.py  projections.py  routes.py  schema.sql  wsgi.py
scotclimpact/pages/: accessibility.md  disclaimer.md
scotclimpact/static/: map.js  package-lock.json  package.json  webpack.config.js
scotclimpact/static/src/: color_map.js  disclaimer.js  legend.js  main.js  map.js  postcode_search.js  slider.js
scotclimpact/static/tests/: apply_color_map.test.js
scotclimpact/templates/: accessibility.html  base.html  disclaimer.html  map.html
tests/: fixtures.py  test_data_helpers.py  test_db.py  test_modis_projections.py  test_routes_index.py
