[project]
name = "scotclimpact"
description = "A web tool to esmitate the impact of climate change in Scotland"
version = '0.0.1'
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-static-digest>=0.4.1",
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "xarray>=2025.6.1",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "scipy>=1.15.3",
    "geopandas>=1.1.1",
    "flask-caching>=2.3.1",
    "pooch>=1.8.2",
]

[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
